k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-exchange
  labels:
    name: crypto-exchange
